fix jumping background image

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -49,7 +49,13 @@
   position: relative;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling:touch;
   min-height: 100vh;
   color: var(--color-text);
   /*background: var(--color-background);*/
